--- a/qrRedirect.html
+++ b/qrRedirect.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting..</title>
 </head>
-
 <body>
 
     <h4>Redirecting...</h4>
@@ -30,8 +28,7 @@
             let retVal = "";
             splitedQuery.forEach(item => {
                 if(item !== "json"){
-                    var decodedVal = decodeURI(item);
-                    retVal = decodedVal;
+                    retVal = item;
                 }
             });
             return retVal;
@@ -57,7 +54,5 @@
             }, 3000);
         }
     </script>
-
 </body>
-
 </html>
